Arreglo de mensajes y optimización ligera