@@ -18,30 +18,14 @@ public class ClanAdminCommand extends CompositeCommand {
     public ClanAdminCommand(Clans addon) {
         super(addon, "clanadmin");
         this.clans = addon;
-        // Programar el registro de subcomandos para el próximo tick
-        if (addon != null) {
-            Bukkit.getScheduler().runTask(addon.getPlugin(), this::registerSubCommands);
-        } else {
-            getLogger().warning("Advertencia: addon es null en ClanAdminCommand. Los subcomandos no se registrarán.");
-        }
+        registerSubCommands();
     }
 
     @Override
     public void setup() {
         setPermission("clans.admin");
-        setDescription("Temporal description"); // Descripción temporal
-        setUsage("<comando>");
-        // Programar la configuración de traducciones
-        if (getAddon() != null) {
-            Bukkit.getScheduler().runTask(getAddon().getPlugin(), this::configure);
-        }
-    }
-
-    private void configure() {
-        // Actualizar con la traducción
-        if (clans != null) {
-            setDescription(clans.getTranslation(null, "clans.commands.admin.clan.description"));
-        }
+        setParametersHelp("clans.commands.admin.clan.parameters");
+        setDescription("clans.commands.admin.clan.description");
     }
 
     private void registerSubCommands() {
@@ -65,26 +49,13 @@ public class ClanAdminCommand extends CompositeCommand {
         public ClanReloadCommand(Clans addon, CompositeCommand parent) {
             super(addon, parent, "reload");
             this.clans = addon;
-            // Programar la configuración para el próximo tick
-            if (addon != null) {
-                Bukkit.getScheduler().runTask(addon.getPlugin(), this::configure);
-            } else {
-                getLogger().warning("Advertencia: addon es null en ClanReloadCommand. La configuración no se ejecutará.");
-            }
         }
 
         @Override
         public void setup() {
             setPermission("clans.admin.reload");
-            setDescription("Temporal description"); // Descripción temporal
-            setUsage("");
-        }
-
-        private void configure() {
-            // Actualizar con la traducción
-            if (clans != null) {
-                setDescription(clans.getTranslation(null, "clans.commands.admin.clan.reload.description"));
-            }
+            setParametersHelp("clans.commands.admin.clan.reload.parameters");
+            setDescription("clans.commands.admin.clan.reload.description");
         }
 
         @Override
@@ -127,19 +98,8 @@ public class ClanAdminCommand extends CompositeCommand {
         @Override
         public void setup() {
             setPermission("clans.admin.penitence");
-            setDescription("Temporal description"); // Descripción temporal
-            setUsage("<comando>");
-            // Programar la configuración de traducciones
-            if (getAddon() != null) {
-                Bukkit.getScheduler().runTask(getAddon().getPlugin(), this::configure);
-            }
-        }
-
-        private void configure() {
-            // Actualizar con la traducción
-            if (clans != null) {
-                setDescription(clans.getTranslation(null, "clans.commands.admin.penitence.description"));
-            }
+            setParametersHelp("clans.commands.admin.penitence.parameters");
+            setDescription("clans.commands.admin.penitence.description");
         }
 
         private void registerSubCommands() {
@@ -163,27 +123,13 @@ public class ClanAdminCommand extends CompositeCommand {
         public PenitenceClearCommand(Clans addon, CompositeCommand parent) {
             super(addon, parent, "clear");
             this.clans = addon;
-            // Programar la configuración para el próximo tick
-            if (addon != null) {
-                Bukkit.getScheduler().runTask(addon.getPlugin(), this::configure);
-            } else {
-                getLogger().warning("Advertencia: addon es null en PenitenceClearCommand. La configuración no se ejecutará.");
-            }
         }
 
         @Override
         public void setup() {
             setPermission("clans.admin.penitence");
-            setDescription("Temporal description"); // Descripción temporal
-            setUsage("Temporal usage");
-        }
-
-        private void configure() {
-            // Actualizar con la traducción
-            if (clans != null) {
-                setDescription(clans.getTranslation(null, "clans.commands.admin.penitence.clear.description"));
-                setUsage(clans.getTranslation(null, "clans.commands.admin.penitence.clear.usage"));
-            }
+            setParametersHelp("clans.commands.admin.penitence.clear.parameters");
+            setDescription("clans.commands.admin.penitence.clear.description");
         }
 
         @Override
@@ -193,7 +139,7 @@ public class ClanAdminCommand extends CompositeCommand {
                 return false;
             }
 
-            String targetName = args.get(0);
+            String targetName = args.getFirst();
             OfflinePlayer targetPlayer = Bukkit.getOfflinePlayerIfCached(targetName);
             if (targetPlayer == null || !targetPlayer.hasPlayedBefore()) {
                 user.sendMessage(clans.getTranslation(user, "clans.commands.admin.penitence.clear.player-not-found",
@@ -215,7 +161,7 @@ public class ClanAdminCommand extends CompositeCommand {
         @Override
         public Optional<List<String>> tabComplete(User user, String alias, List<String> args) {
             if (args.size() <= 1) {
-                String input = args.isEmpty() ? "" : args.get(0).toLowerCase();
+                String input = args.isEmpty() ? "" : args.getFirst().toLowerCase();
                 return Optional.of(Bukkit.getOnlinePlayers().stream()
                         .map(Player::getName)
                         .filter(name -> name.toLowerCase().startsWith(input))
